- fix getting UUID on mdmadm (eg: md0) devices
- getInputDevices(): keep "Bus=..." for drakx-kbd-mouse-x11

Version 10.4.202 - 17 September 2007, by Thierry Vignaud

- localedrake menu entries (#32941):
  o hide system config
  o make them more understandable

Version 10.4.200 - 17 September 2007, by Thierry Vignaud

- only run "chksession -l" if needed
- bootloader-config:
  o --rebuild-initrds: don't choke on kernel files which have no version in
    file name (#28772)
- drakboot:
  o boot entrie list uses ellipsis rather than scroll bar
- harddrake2:
  o display model & vendor for SCSI devices too

Version 10.4.198 - 16 September 2007, by Thierry Vignaud

- fix a crash
- localedrake:
  o install scim-bridge-qt4 if KDE4 is installed

Version 10.4.197 - 15 September 2007, by Thierry Vignaud

- diskdrake:
  o fix typo breaking reading fstab with UUID= entries
- localedrake:
  o enable to select 'scim-bridge' as IM
  o install needed packages for skim
  o install scim-qtimm for scim default config
  o remove extra SCIM combinations (simpler)

Version 10.4.195 - 14 September 2007, by Thierry Vignaud

- distinct exceptions from segfaults, thus restoring catching SIGSEGV
  and preventing looping while segfaulting again
- fix loading of tifm_sd module (#18237)
- run_program layer: enable to drop privileges through setuid()
- drakbug:
  o run the regular user browser (#33522)

Version 10.4.193 - 13 September 2007, by Thierry Vignaud

- drakbug:
  o better behaviour when resizing
  o use a TextView instead of Label so that text is selectable (see #33023)
  o better formatting
- draksound:
  o prevent stupid & useless "driver for your sound card is unlisted"
  o no more need to:
    * list OSS/ALSA alternatives if none
    * sync with list_modules

Version 10.4.192 - 12 September 2007, by Olivier "blino" Blin

- localedrake
  o drop support for iiimf
- list jmicron driver in disk/ide
- library: have "defaults" mount option instead of empty string (for rescue)