@@ -1,3 +1,4 @@
+- handle /boot/xxx files on linux raid1
 - when basesystem can't be selected, display the reason
 - also load dm-zero for dmraid
 - add RC2 banner
