@@ -1,3 +1,5 @@
+- bootloader-config:
+  o handle /boot/xxx files on linux raid1
 - fix getting UUID on mdmadm (eg: md0) devices
 - getInputDevices(): keep "Bus=..." for drakx-kbd-mouse-x11
 
